--- a/crudoperations/.classpath
+++ b/crudoperations/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/apache-tomcat-8.5.29/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/apache-tomcat-8.5.29/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/apache-tomcat-8.5.0/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/apache-tomcat-8.5.0/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
